welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:7: error: '(' expected but '{' found.
  if  { ((isMorning && isMom) || !isMorning)
      ^answerCell:11: error: illegal start of simple expression
}
^